--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,8 @@
             <%= render 'layouts/topnavbar' %>
 
             <!-- Main view  -->
+            <p class="notice"><%= notice %></p>
+            <p class="alert"><%= alert %></p>
             <%= yield %>
 
             <!-- Footer -->
