--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
                         <span class="text-muted text-xs block">Example menu<b class="caret"></b></span>
                     </a>
                     <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                        <li><%= link_to "Logout", destroy_user_session_path, class: "dropdown-item", method: :delete %></li>
                     </ul>
                 </div>
                 <div class="logo-element">
