--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -25,6 +25,11 @@
                 <i class="fa fa-desktop"></i> <span class="nav-label">Minor page</span>
                 <% end %>
             </li>
+            <li class="<%= 'active' if current_page?('/persona') %>">
+                <%= link_to "/persona" do %>
+                <i class="fa fa-users"></i> <span class="nav-label">Votantes</span>
+                <% end %>
+            </li>
         </ul>
 
     </div>
