--- a/app/views/layouts/empty.html.erb
+++ b/app/views/layouts/empty.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Inicio de session</title>
+    <title>Juan Manotas</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <!-- Include style per-controller - vendor plugins -->
@@ -17,7 +17,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-
+    
     <%= yield %>
     <!-- Include javascript per-controller - vendor plugins -->
     <%= javascript_include_tag params[:controller] if javascript_exists?(params[:controller]) %>
