--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,8 @@
 <div class="footer">
     <div class="pull-right">
-        10GB of <strong>250GB</strong> Free.
+        <strong>El diputado del Atlantico</strong>
     </div>
     <div>
-        <strong>Copyright</strong> Example Company &copy; 2014-2019
+        <strong>Copyright</strong> Example Company &copy; 2019
     </div>
 </div>
