--- a/app/views/persona/_allpersonas.html.erb
+++ b/app/views/persona/_allpersonas.html.erb
@@ -6,6 +6,7 @@
       <th scope="col">Nombre</th>
       <th scope="col">Apellido</th>
       <th scope="col">Direccion</th>
+      <th scope="col">Correo</th>
       <th scope="col">Celular</th>
     </tr>
   </thead>
@@ -17,6 +18,7 @@
           <td><%=persona.nombre%></td>
           <td><%=persona.apellido%></td>
           <td><%=persona.direccion%></td>
+          <td><%=persona.correo%></td>
           <td><%=persona.celular%></td>
         </tr>
     <%end%>
