--- a/app/views/persona/new.html.erb
+++ b/app/views/persona/new.html.erb
@@ -1,2 +1,13 @@
-<h1>Persona#new</h1>
-<p>Find me in app/views/persona/new.html.erb</p>
+<div class="col-md-2">
+
+</div>
+<div class="col-md-7">
+  <h1>Agregar votante</h1>
+  <%= render 'form'%>
+  <br>
+  <br>
+  <br>
+</div>
+<div class="col-md-3">
+
+</div>
