--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
                     <li><a class="nav-link page-scroll" href="#team">Prensa</a></li>
                     <li><a class="nav-link page-scroll" href="#comments">Comentarios</a></li>
                     <li><a class="nav-link page-scroll" href="#contact">Contactame</a></li>
-                    <li><%= link_to "Seguidores", persona_index_path,class: "nav-link page-scroll"%></li>
+                    <li><%= link_to "Seguidores", personas_path,class: "nav-link page-scroll"%></li>
                 </ul>
             </div>
         </div>
