--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,13 +15,13 @@
                     J.M
                 </div>
             </li>
-            <li class="<%= 'active' if current_page?('/persona/new') %>">
-                <%= link_to "/persona/new" do %>
+            <li class="<%= 'active' if current_page?('/personas/new') %>">
+                <%= link_to "/personas/new" do %>
                 <i class="fa fa-user-plus"></i> <span class="nav-label">Ingresar votante</span>
                 <% end %>
             </li>
-            <li class="<%= 'active' if current_page?('/persona') %>">
-                <%= link_to "/persona" do %>
+            <li class="<%= 'active' if current_page?('/personas') %>">
+                <%= link_to "/personas" do %>
                 <i class="fa fa-users"></i> <span class="nav-label">Votantes</span>
                 <% end %>
             </li>
