--- a/app/views/layouts/_topnavbar.html.erb
+++ b/app/views/layouts/_topnavbar.html.erb
@@ -11,7 +11,7 @@
         <ul class="nav navbar-top-links navbar-right">
             <li>
                 <%= link_to destroy_user_session_path, method: :delete do %>
-                    <i class="fa fa-sign-out"></i> Log out
+                    <i class="fa fa-sign-out"></i> Salir
                 <%end%>
             </li>
         </ul>
