--- a/app/views/persona/_form.html.erb
+++ b/app/views/persona/_form.html.erb
@@ -4,5 +4,5 @@
   <%= f.input :apellido %>
   <%= f.input :direccion %>
   <%= f.input :celular %>
-  <%= f.button :submit, class: "btn btn-success"%>
+  <%= f.submin "Guardar", class: "btn btn-success"%>
 <% end %>
