--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,15 +26,13 @@
 <ol class="carousel-indicators">
     <li data-target="#inSlider" data-slide-to="0" class="active"></li>
     <li data-target="#inSlider" data-slide-to="1"></li>
+    <li data-target="#inSlider" data-slide-to="2"></li>
 </ol>
 <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
         <div class="container">
             <div class="carousel-caption">
-                <h2>El Atlántico Avanza Juancho Manotas</h2>
-            </div>
-            <div class="carousel-image wow zoomIn">
-                <img src="" alt="land_1">
+                <!-- <h2>El Atlántico Avanza Juancho Manotas</h2> -->
             </div>
         </div>
         <!-- Set background for slide in css -->
@@ -44,11 +42,20 @@
     <div class="carousel-item">
         <div class="container">
             <div class="carousel-caption blank">
-                <h2>El Atlántico Avanza Juancho Manotas</h2>
+                <!-- <h2>El Atlántico Avanza Juancho Manotas</h2> -->
             </div>
         </div>
         <!-- Set background for slide in css -->
         <div class="header-back two"></div>
+    </div>
+    <div class="carousel-item">
+        <div class="container">
+            <div class="carousel-caption blank">
+                <!-- <h2>El Atlántico Avanza Juancho Manotas</h2> -->
+            </div>
+        </div>
+        <!-- Set background for slide in css -->
+        <div class="header-back three"></div>
     </div>
 </div>
 <a class="carousel-control-prev" href="#inSlider" role="button" data-slide="prev">
