--- a/app/views/personas/_form.html.erb
+++ b/app/views/personas/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @persona do |f| %>
-  <%= f.input :cedula %>
+  <%= f.input :cedula, autofocus: true%>
   <%= f.input :nombre %>
   <%= f.input :apellido %>
   <%= f.input :direccion %>
