--- a/app/assets/stylesheets/base/landing.scss
+++ b/app/assets/stylesheets/base/landing.scss
@@ -98,7 +98,7 @@ body.landing-page {
     transition: all 0.3s ease-in-out 0s;
   }
   .navbar-default .nav li a {
-    color: #fff;
+    color: #000;
     font-family: 'Open Sans', helvetica, arial, sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
@@ -203,14 +203,17 @@ body.landing-page {
   /* BACKGROUNDS SLIDER
   -------------------------------------------------- */
   .header-back {
-    height: 470px;
+    height: 500px;
     width: 100%;
   }
   .header-back.one {
-    background: image-url("landing/header_one.jpg")  50% 0 no-repeat;
+    background: image-url("jm_landi.jpg")  50% 0 no-repeat;
   }
   .header-back.two {
-    background: image-url("landing/header_two.jpg") 50% 0 no-repeat;
+    background: image-url("jm_landi-3.jpg") 50% 0 no-repeat;
+  }
+  .header-back.three {
+    background: image-url("jm_landi-2.jpg") 50% 0 no-repeat;
   }
   /* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
