--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
 
             <!-- Page wrapper -->
             <%= render 'layouts/topnavbar' %>
-
+            <%= custom_bootstrap_flash %>
             <!-- Main view  -->
             <%= yield %>
             <!-- Footer -->
