--- a/app/views/layouts/empty.html.erb
+++ b/app/views/layouts/empty.html.erb
@@ -8,19 +8,20 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <!-- Include style per-controller - vendor plugins -->
-    <%= stylesheet_link_tag params[:controller] if stylesheet_exists?(params[:controller]) %>
+    <%= stylesheet_link_tag params[:controller] if ::Rails.application.assets.find_asset("#{params[:controller]}.css") %>
 
     <!-- Main css styles -->
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-    <!-- Main javascript files -->
+    <!-- Main jaevascript files -->
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
-    
+
     <%= yield %>
     <!-- Include javascript per-controller - vendor plugins -->
-    <%= javascript_include_tag params[:controller] if javascript_exists?(params[:controller]) %>
+    <!-- Include javascript per-controller - vendor plugins -->
+    <%= javascript_include_tag params[:controller] if ::Rails.application.assets.find_asset("#{params[:controller]}.js") %>
 
     <!-- Include javascript per-view -->
     <!-- For demo purpose we include javascript in view but you can easily start SeedProject and organize it with Rails asset pipeline as you want -->
