--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,39 @@
-<h2>Forgot your password?</h2>
+<div class="passwordBox animated fadeInDown">
+    <div class="row">
 
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+        <div class="col-md-12">
+            <div class="ibox-content">
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+                <h2 class="font-bold">Olvidaste tu contraseña?</h2>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+                <p>
+                    Ingrese su dirección de correo electrónico y su contraseña será restablecida y le será enviada por correo electrónico.
+                </p>
 
-<%= render "devise/shared/links" %>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+                          <%= render "devise/shared/error_messages", resource: resource %>
+
+                              <div class="form-group">
+                                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+                              </div>
+
+                              <%= f.submit "Enviarme instrucciones para restablecer contraseña", class: "btn btn-primary block full-width m-b" %>
+                        <%end%>
+                        <center><%= render "devise/shared/links" %></center>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr/>
+    <div class="row">
+        <div class="col-md-6">
+            Company CarsOk
+        </div>
+        <div class="col-md-6 text-right">
+            <small>© 2015</small>
+        </div>
+    </div>
+</div>
