--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,6 +3,6 @@
           <strong>El diputado del Atlantico</strong>
       </div>
       <div>
-          <strong>Copyright</strong> Example Company &copy; 2019
+          <strong>Copyright</strong> CarsOk © 2014-2015
       </div>
   </div>
