--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,12 +17,12 @@
             </li>
             <li class="<%= 'active' if current_page?('/personas/new') %>">
                 <%= link_to "/personas/new" do %>
-                <i class="fa fa-user-plus"></i> <span class="nav-label">Ingresar votante</span>
+                <i class="fa fa-user-plus"></i> <span class="nav-label">Ingresar amigo</span>
                 <% end %>
             </li>
             <li class="<%= 'active' if current_page?('/personas') %>">
                 <%= link_to "/personas" do %>
-                <i class="fa fa-users"></i> <span class="nav-label">Votantes</span>
+                <i class="fa fa-users"></i> <span class="nav-label">Amigos</span>
                 <% end %>
             </li>
         </ul>
