--- a/app/views/personas/_allpersonas.html.erb
+++ b/app/views/personas/_allpersonas.html.erb
@@ -2,13 +2,13 @@
   <thead class="thead-light">
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Cedula</th>
-      <th scope="col">Nombre</th>
-      <th scope="col">Apellido</th>
-      <th scope="col">Direccion</th>
-      <th scope="col">Correo</th>
-      <th scope="col">Celular</th>
-      <th scope="col">Editar</th>
+      <th scope="col">CEDULA</th>
+      <th scope="col">NOMBRE</th>
+      <th scope="col">APELLIDO</th>
+      <th scope="col">DIRECCION</th>
+      <th scope="col">CORREO</th>
+      <th scope="col">CELULAR</th>
+      <th scope="col">EDITAR</th>
     </tr>
   </thead>
   <tbody>
