--- a/app/views/personas/edit.html.erb
+++ b/app/views/personas/edit.html.erb
@@ -2,7 +2,7 @@
 
 </div>
 <div class="col-md-7">
-  <h1>Editar Amigo <%=@persona.nombre%></h1>
+  <h1>Editar el Amigo <%=@persona.nombre%></h1>
   <%= render 'form'%>
   <br>
   <br>
