--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -250,7 +250,7 @@
     </div>
     <div class="row">
         <div class="col-lg-12 text-center m-t-lg m-b-lg">
-            <p><strong>&copy; 2019 Company Name</strong>
+            <p><strong>&copy; 2019 Carsok</strong>
         </div>
     </div>
 </div>
