--- a/app/views/personas/_allpersonas.html.erb
+++ b/app/views/personas/_allpersonas.html.erb
@@ -8,7 +8,9 @@
       <th scope="col">DIRECCION</th>
       <th scope="col">CORREO</th>
       <th scope="col">CELULAR</th>
-      <th scope="col">EDITAR</th>
+      <%unless current_user.has_role? :admin%>
+        <th scope="col">EDITAR</th>
+      <%end%>
     </tr>
   </thead>
   <tbody>
@@ -21,7 +23,9 @@
           <td><%=persona.direccion%></td>
           <td><%=persona.correo%></td>
           <td><%=persona.celular%></td>
-          <td><%=link_to edit_persona_path(persona) do %><center><i class="fa fa-edit fa-2x""></center></i><%end%></td>
+          <%unless current_user.has_role? :admin%>
+            <td><%=link_to edit_persona_path(persona) do %><center><i class="fa fa-edit fa-2x""></center></i><%end%></td>
+          <%end%>
         </tr>
     <%end%>
   </tbody>
