--- a/app/views/personas/_allpersonas.html.erb
+++ b/app/views/personas/_allpersonas.html.erb
@@ -14,9 +14,9 @@
     </tr>
   </thead>
   <tbody>
-    <% @personas.each do |persona|%>
+    <% @personas.each_with_index do |persona, index|%>
         <tr>
-          <th scope="row"><%=persona.id%></th>
+          <th scope="row"><%=index+1%></th>
           <td><%=persona.cedula%></td>
           <td><%=persona.nombre%></td>
           <td><%=persona.apellido%></td>
