--- a/app/assets/stylesheets/base/landing.scss
+++ b/app/assets/stylesheets/base/landing.scss
@@ -431,7 +431,7 @@ body.landing-page {
     color: $navy !important;
   }
   .contact {
-    background-image: image-url("landing/word_map.png");
+    // background-image: image-url("landing/word_map.png");
     background-position: 50% 50%;
     background-repeat: no-repeat;
     margin-top: 60px;
