--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <!-- Include style per-controller - vendor plugins -->
-    <%= stylesheet_link_tag params[:controller] if stylesheet_exists?(params[:controller]) %>
+    <%= stylesheet_link_tag    params[:controller] if ::Rails.application.assets.find_asset("#{params[:controller]}.css")%>
     <!-- Main css styles -->
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <!-- Main javascript files -->
@@ -33,7 +33,7 @@
     </div>
     <!-- End wrapper-->
     <!-- Include javascript per-controller - vendor plugins -->
-    <%= javascript_include_tag params[:controller] if javascript_exists?(params[:controller]) %>
+    <%= javascript_include_tag params[:controller] if ::Rails.application.assets.find_asset("#{params[:controller]}.js")%>
     <!-- Include javascript per-view -->
     <!-- For demo purpose we include javascript in view but you can easily start SeedProject and organize it with Rails asset pipeline as you want -->
     <%= yield :javascript %>
