--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li><%= link_to "Inicio", root_path,class: "nav-link page-scroll"%></li>
-                    <li><a class="nav-link page-scroll" href="#features">Features</a></li>
+                    <li><a class="nav-link page-scroll" href="#features">Propuestas</a></li>
                     <li><a class="nav-link page-scroll" href="#team">Prensa</a></li>
                     <li><a class="nav-link page-scroll" href="#comments">Comentarios</a></li>
                     <li><a class="nav-link page-scroll" href="#contact">Contactame</a></li>
@@ -72,24 +72,20 @@
 <section id="features" class="container services">
 <div class="row">
     <div class="col-sm-3">
-        <h2>Full responsive</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
-        <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
+        <h2>Universidad del Atlántico</h2>
+        <p>Apoyar la regionalización del funcionamiento de la Universidad del Atlántico, creando una sede en la zona Costera y el Municipio de Soledad.</p>
     </div>
     <div class="col-sm-3">
-        <h2>LESS/SASS Files</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
-        <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
+        <h2>Corredor industrial</h2>
+        <p>Apoyar el corredor industrial en la vía de la cordialidad entre Baranoa y Sabanalarga para combatir el desempleo.</p>
     </div>
     <div class="col-sm-3">
-        <h2>6 Charts Library</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
-        <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
+        <h2>Aguas el GUAJARO</h2>
+        <p>Apoyar la creación de una Corporación para la conservación, preservación y defensa del cuerpo de aguas el GUAJARO.</p>
     </div>
     <div class="col-sm-3">
-        <h2>Advanced Forms</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus.</p>
-        <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
+        <h2>Zonas verdes</h2>
+        <p>Rescatar las zonas verdes y los parques de los municipios de nuestro departamento, creando en conjunto con las ONG, los Clubes Sociales y las oficinas de Participación Ciudadana.</p>
     </div>
 </div>
 </section>
