--- a/app/views/personas/_allpersonas.html.erb
+++ b/app/views/personas/_allpersonas.html.erb
@@ -24,7 +24,7 @@
           <td><%=persona.correo%></td>
           <td><%=persona.celular%></td>
           <%unless current_user.has_role? :admin%>
-            <td><%=link_to edit_persona_path(persona) do %><center><i class="fa fa-edit fa-2x""></center></i><%end%></td>
+            <td><%=link_to edit_persona_path(persona) do %><center><i class="fa fa-edit fa-2x"></center></i><%end%></td>
           <%end%>
         </tr>
     <%end%>
